# video-to-gif

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  POETRY_SETUP.md  README.md  build-docker.sh  docker-compose.yml  pyproject.toml  skaffold.yaml
.github/workflows/: docker-publish-script.yml
app/: main.py
app/api/endpoints/: conversion.py
app/core/: config.py
app/services/: video_conversion.py
app/static/: index.html
k8s/: cert-manager-issuer.yaml  configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
scripts/: format.sh  lint.sh
